fix distorted portrait service images

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -2426,6 +2426,7 @@ $medium_color: #A07A45;
 // Auto-columns
 div.auto_columns img {
     width: 100%;
+    height: auto;
     border: solid 2px #ddd; /*#E8D593;*/
     border-radius: 6px;
 }
